--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio Website - Bipin</title>
-    <link rel="stylesheet" href="/Static/style2.css">
+    <link rel="stylesheet" href="/style2.css">
 </head>
 <body>
     <div id="header">
         <div class="container">
             <!-- navbar has to be copied into every html file as github pages is static-->
             <nav>
-                <img src="/Static/Logo.png" class="logo" alt="Logo">
+                <img src="/Logo.png" class="logo" alt="Logo">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Me</a></li>
