--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <!-- navbar has to be copied into every html file as github pages is static-->
             <nav>
-                <img src="/Logo.png" class="logo" alt="Logo">
+                <img src="Logo.png" class="logo" alt="Logo">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Me</a></li>
