--- a/about.html
+++ b/about.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me - Bipin</title>
-    <link rel="stylesheet" href="/style2.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
     <!-- navbar has to be copied into every html file as github pages is static-->
     <nav>
-        <img src="/Logo.png" class="logo" alt="Logo">
+        <img src="Logo.png" class="logo" alt="Logo">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
@@ -19,7 +19,7 @@
     </nav>
     <div id="about" class="section">
         <h2>About Me</h2>
-        <img src="/bipid.jpg" class = "profile" alt = "Selfie of Bipin">
+        <img src="bipid.jpg" class = "profile" alt = "Selfie of Bipin">
     </div>
     <body>
         <h1><b style="font-size: 25px",>Hey, I am Bipin.</b> </h1>
