--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Bipin</title>
-    <link rel="stylesheet" href="/style2.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
      <!-- navbar has to be copied into every html file as github pages is static-->
      <nav>
-        <img src="/Logo.png" class="logo" alt="Logo">
+        <img src="Logo.png" class="logo" alt="Logo">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Me</a></li>
@@ -23,13 +23,13 @@
     <div class="social-links">
         <h2>Connect with Me</h2>
         <a href="https://www.linkedin.com/in/bipindhakal1/" target="_blank">
-            <img src="/linkedin_logo.jpg" alt="LinkedIn" class="social-logo">
+            <img src="linkedin_logo.jpg" alt="LinkedIn" class="social-logo">
         </a>
         <a href="https://github.com/bipindhaka1" target="_blank">
-            <img src="/github_logo.png" alt="GitHub" class="social-logo">
+            <img src="github_logo.png" alt="GitHub" class="social-logo">
         </a>
         <a href="mailto:bipindhakal317@gmail.com">
-            <img src="/email_logo.jpg" alt="Email" class="social-logo">
+            <img src="email_logo.jpg" alt="Email" class="social-logo">
         </a>
     </div>
 </body>
